# enhance-doc-img

./: CMakeLists.txt  README.md
client_app/: CMakeLists.txt  conanfile.txt
client_app/src/: main.cpp
enhance_doc/: CMakeLists.txt  conanfile.txt
enhance_doc/include/enhance_doc/: enhance_doc.h
enhance_doc/src/: enhance_doc.cpp
makebitonal/: CMakeLists.txt
makebitonal/include/: make_bitonal.h  makebitonal_export.h
makebitonal/src/: make_bitonal.cpp
